--- a/trunk/docs/usrdoc/qmcpack-u.tex
+++ b/trunk/docs/usrdoc/qmcpack-u.tex
@@ -4,35 +4,23 @@
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{fullpage}
 %\usepackage{graphicx}
-\usepackage[bookmarks=false,colorlinks=true,linkcolor={blue},pdfstartview={XYZ null null 1.22}]{hyperref}
 \usepackage[usenames,dvipsnames]{color}
+\usepackage[bookmarks=false,colorlinks=true,linkcolor={blue},pdfstartview={XYZ null null 1.22}]{hyperref}
+\usepackage{fancyvrb}
 %\usepackage{verbatim}
-\usepackage{listings}
+%\usepackage{listings}
 \usepackage{natbib,mdwlist}
-\usepackage[tracking=true]{microtype}
+%\usepackage[tracking=true]{microtype}
 
-%\DeclareMicrotypeSet*[tracking]{my}
-%   { encoding = *,
-%     size     = {-small,Large-},
-%     font     = */*/*/tt/* }
-
-\definecolor{codebg}{gray}{0.80}
-\SetTracking{encoding=*,shape=tt*}{-20}
-\lstloadlanguages{[ISO]C++}
-\newcommand{\icode}[1]{\textcolor{OliveGreen}{\texttt{#1}}}
-\newcommand{\icnsl}[1]{\textcolor{RoyalBlue}{\texttt{#1}}}
-\lstnewenvironment{lstcpp}{\lstset{backgroundcolor=\color{codebg},language=[ISO]C++,basicstyle=\color{OliveGreen}\ttfamily}}{}
-%\lstnewenvironment{lstxml}{\lstset{backgroundcolor=\color{codebg},language=XML}}{}
-%\lstnewenvironment{lstcmake}{\lstset{backgroundcolor=\color{codebg},language=make}}{}
-%\lstnewenvironment{lstcnsl}{\lstset{backgroundcolor=\color{codebg},language=bash,basicstyle=\color{OliveGreen}\tt}}{}
-\lstnewenvironment{lstcnsl}{\lstset{backgroundcolor=\color{codebg},basicstyle=\color{OliveGreen}\ttfamily}}{}
-%\newenvironment{code}{\color{OliveGreen}\verbatim}{\endverbatim}
-%\newenvironment{fpath}{\color{RoyalBlue}\verbatim}{\endverbatim}
-%\newenvironment{code}{\fbox\bgroup}{\egroup}
-%\makeatletter\newenvironment{code}{%
-%   \begin{lrbox}{\@tempboxa}\begin{minipage}{0.9\columnwidth}}{\end{minipage}\end{lrbox}%
-%   \colorbox{OliveGreen}{\usebox{\@tempboxa}}
-%}\makeatother
+%\definecolor{codebg}{gray}{0.80}
+%\newcommand{\icode}[1]{\textcolor{OliveGreen}{\texttt{#1}}}
+%\newcommand{\iconsole}[1]{\textcolor{RoyalBlue}{\texttt{#1}}}
+\newcommand{\icode}[1]{\textcolor{OliveGreen}{\Verb|#1|}}
+\newcommand{\iconsole}[1]{\textcolor{RoyalBlue}{\Verb|#1|}}
+\newcommand{\codesrc}[1]{\VerbatimInput[frame=single,rulecolor=\color{black},formatcom=\color{OliveGreen},numbers=left]{#1}}
+\newcommand{\consolesrc}[1]{\VerbatimInput[frame=single,rulecolor=\color{black},formatcom=\color{RoyalBlue},numbers=none]{#1}}
+\DefineVerbatimEnvironment{code}{Verbatim}{numbers=left,frame=single,rulecolor=\color{black},formatcom=\color{OliveGreen},numbers=none}
+\DefineVerbatimEnvironment{console}{Verbatim}{numbers=left,frame=single,rulecolor=\color{black},formatcom=\color{RoyalBlue},numbers=none}
 
 \title{QMCPACK User Documentation}
 \author{UIUC Electronic Structure Group}
