--- a/trunk/docs/usrdoc/qmcpack-u-run.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-run.tex
@@ -5,7 +5,7 @@ QMCPACK uses MPI/OpenMP hybrid method for the parallelization. The optimal choic
 \item{} memory hierarchy.
 \end{itemize}
 
-For the common multicore chips of today, using one MPI per node and setting \verb|OMP\_NUM\_THREADS| to the number of cores of a node will work. But, if a walker can be fit into a NUMA node, it is better to use one MPI per NUMA node. For instance, on Cray XT5 with dual hex-core AMD chips, setting \verb|OMP\_NUM\_THREADS=6| will work best. [check this]
+For the common multicore chips of today, using one MPI per node and setting \icode{OMP\_NUM\_THREADS} to the number of cores of a node will work. But, if a walker can be fit into a NUMA node, it is better to use one MPI per NUMA node. For instance, on Cray XT5 with dual hex-core AMD chips, setting \icode{OMP\_NUM\_THREADS=6} will work best. [check this]
 
 Setting the number of walkers and samples can be tricky with parallel runs. The basic rule is at least one walker per thread.  See Setting samples to learn how to control QMC runs.
 
