--- a/trunk/docs/usrdoc/qmcpack-u-ov.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-ov.tex
@@ -1,6 +1,8 @@
 \chapter{Overview}
 \section{What QMC calculates}
 \section{What QMCPACK calculates}
+\subsection{Units}
+All numerical values processed in QMCPACK are in atomic units, ie. bohrs, elementary charges, electron masses, and hartrees.  Consult \url{http://en.wikipedia.org/wiki/Atomic_units} for conversion factors.
 \section{QMC algorithms implemented}
 \subsection{Variational Monte Carlo}
 Refs: \cite{PhysRev.138.A442,PhysRevB.16.3081}
