--- a/trunk/docs/usrdoc/qmcpack-u-cnf.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-cnf.tex
@@ -1,13 +1,14 @@
 \chapter{Configuring Simulations}
 %\section{Complete input file reference}
 %... maybe a link to the schema once it's complete?
-Why XML? We understand the cons of XML and a steep learning curve to overcome but we (at least JK) believe that the pros outweigh the cons. Especially from the developers' point, XML reflects the design of QMCPACK and makes the developers think about how the objects should be written. We recommend you (as a developer) to first write down XML element for a new object and think about how the logic works itself and with other objects. 
+Why XML? We understand the cons of XML and a steep learning curve to overcome but we (at least JK) believe that the pros outweigh the cons. Especially from the developers' point, XML reflects the design of QMCPACK and makes the developers think about how the objects should be written.
+%We recommend you (as a developer) to first write down XML element for a new object and think about how the logic works itself and with other objects.
 
 The input xml for qmc sections are extremely simple. The major difficulties concern trial wavefunctions. The components of a trial wavefunction can be divided into
-\begin{enumerate}
+\begin{enumerate*}
 \item{} Jastrow functions: one, two, and three (no four body yet)
 \item{} Fermion wavefunction: Slater determinant, Geminal 
-\end{enumerate}
+\end{enumerate*}
 
 Jastrow functions are rather simple but have to be defined by users.
 
@@ -16,9 +17,41 @@ On the other hand, users seldom have to prepare Fermion wavefunctions. They are 
 We have not implemented backflow wavefunctions but think we can use Jastrow/Fermion to represent them. 
 
 \section{Specifying the system}
-cell and the particles
+%cell and the particles
+Two entities constitute the specification of the system: the particles and the virtual space where they reside.  The latter is known as the \emph{supercell} or simply the \emph{cell} in simulation jargon, for reasons to be clear shortly.  The size and the boundary condition of the cell depend largely on the type of system being simulated.  For example, calculating the electronic properties of a system of a few immobile molecules is usually done in open space, whereas extrapolating the thermodynamic properties of bulk liquid is done in bounded supercells with periodic boundary conditions (PBC).  Relevant XML blocks for the case with PBC have the following form.
+\begin{code}
+<simulation>
+  <qmcsystem>
+    <simulationcell>
+      <parameter name="scale">1.0</parameter>
+      <parameter name="lattice">
+        1 0 0
+        0 1 0
+        0 0 1
+      </parameter>
+      <parameter name="bconds">p p p</parameter>
+    </simulationcell>
+  </qmcsystem>
+</simulation>
+\end{code}
+The \icode{lattice} parameter defines the dimensionless primitive vectors for the supercell and \icode{scale} multiplies them by a length scale (in atomic units).
 
-maybe a subsection on the HDF5 format?
+The description of each species of particles consists of charges and masses.  Coordinates are assigned randomly unless explicitly set.\footnote{It is sometimes cumbersome to state the particle coordinates in each xml file.  QMC also supports input from the HDF5, a compact binary format for storing particle data.  Further discussion will follow.}  
+%  Without extra settings, the coordinates are randomly assigned.
+\begin{code}
+<simulation>
+  <qmcsystem>
+    <particleset name="LHe" random="yes">
+      <group name="He" size="64">
+        <parameter name="charge">0</parameter>
+        <parameter name="mass">7296.299379</parameter>
+      </group>
+    </particleset>
+  </qmcsystem>
+</simulation>
+\end{code}
+The \icode{name} attribute for \icode{particleset} and \icode{group} is nothing more than a label.  QMCPACK currently does not automatically recognize elements or load their properties based on the name.  The \icode{size} attribute specifies the number of ``He'' particles in the set.
+%maybe a subsection on the HDF5 format?
 \section{Specifying the wavefunction}
 mention B-splines and postpone the discussion to ``Customized wavefunctions''
 \subsection{Wavefunctions imported from other codes}
